--- a/src/pages/blog/main/posts/post.css
+++ b/src/pages/blog/main/posts/post.css
@@ -52,12 +52,12 @@
 }
 
 .blog-post-three-dots-rtl {
-    left: 0;
+    left: 0 !important;
     background: linear-gradient(to left, transparent, var(--second-bg-color) 42%);
 }
 
 .blog-post-three-dots-normal {
-    right: 0;
+    right: 0 !important;
     background: linear-gradient(to right, transparent, var(--second-bg-color) 42%);
 }
 
